test/operator/add_num_nil.lox
1 + null // error: binary operation only allowed between ints or floats
